--- a/personApi/src/main/resources/application.properties
+++ b/personApi/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 ## Database Properties
 spring.datasource.url = jdbc:mysql://localhost:8889/elias_api_rest?useSSL=true
-spring.datasource.username = elias
+spring.datasource.username = root
 spring.datasource.password = 
 ## Hibernate Properties
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
